--- a/css/style.css
+++ b/css/style.css
@@ -104,4 +104,53 @@
     transform: scale(1.1);
     box-shadow: 2px 10px 15px rgba(0, 0, 0, 0.5);
   }
+}
+.contenedor_loader {
+  background-color: #f3f3f3;
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  z-index: 9999;
+  transition: all 1.2s;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.loader, .loader::before, .loader::after {
+  border-radius: 50%;
+  width: 2.5em;
+  height: 2.5em;
+  animation: loader 1.7s infinite ease-in-out;
+}
+
+.loader {
+  color: #4585fa;
+  font-size: 13px;
+  position: relative;
+  animation-delay: -0.18s;
+}
+
+.loader::before, .loader::after {
+  content: "";
+  position: absolute;
+  top: 0;
+}
+
+.loader::before {
+  left: -3.5em;
+  animation-delay: -0.36s;
+}
+
+.loader::after {
+  left: 3.5em;
+}
+
+@keyframes loader {
+  0%, 80%, 100% {
+    box-shadow: 0 2.5em 0 -1.3em;
+  }
+  40% {
+    box-shadow: 0 2.5em 0 0;
+  }
 }/*# sourceMappingURL=style.css.map */
