Agregué elÃ footer en el index

--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,6 @@
   background-color: transparent;
   margin-top: 2px;
   padding: 1px;
-  border: 1px solid rgb(255, 255, 255);
   border-radius: 20px;
 }
 .color-header p {
@@ -47,7 +46,6 @@
   margin-top: 25px;
   margin-right: 10px;
   margin-left: 5px;
-  border: 1px solid rgb(255, 255, 255);
   transition: all 400ms ease;
   overflow: hidden;
 }
@@ -105,6 +103,26 @@
     box-shadow: 2px 10px 15px rgba(0, 0, 0, 0.5);
   }
 }
+/*Footer*/
+.footer_top {
+  margin-top: 70px;
+}
+
+.titulo {
+  text-align: center;
+  justify-content: center;
+}
+.titulo a {
+  font-family: "Grape Nuts", cursive;
+  text-decoration: none;
+  font-size: 50px;
+  color: rgb(22, 22, 22);
+}
+.titulo a:hover {
+  color: rgb(95, 253, 180);
+  transition: 1.5s;
+}
+
 .contenedor_loader {
   background-color: #f3f3f3;
   position: fixed;
