--- a/scss/layout/_index.scss
+++ b/scss/layout/_index.scss
@@ -3,7 +3,6 @@
     background-color: transparent;
     margin-top: 2px;
     padding: 1px;
-    border: 1px solid rgb(255, 255, 255);
     border-radius: 20px;
     p{
         font-size: 20px;
@@ -44,7 +43,6 @@
         margin-top: 25px;
         margin-right: 10px;
         margin-left: 5px;
-        border: 1px solid rgb(255, 255, 255);
         transition: all 400ms ease;
         overflow: hidden;
         &:hover{
@@ -105,3 +103,21 @@
     }
 }
 
+/*Footer*/
+.footer_top{
+    margin-top: 70px;
+}
+.titulo{
+    text-align: center;
+    justify-content: center;
+    a{
+        font-family: 'Grape Nuts', cursive;
+        text-decoration: none;
+        font-size: 50px;
+        color: rgb(22, 22, 22);
+        &:hover{
+            color: rgb(95, 253, 180);
+            transition: 1.5s;
+        }
+    }  
+}
