--- a/css/style.css
+++ b/css/style.css
@@ -313,7 +313,7 @@
   border-radius: 6px;
   max-width: 180px;
   box-shadow: 0 0 0.1em rgba(0, 0, 0, 0.2);
-  background-color: rgb(245, 245, 245);
+  background-color: transparent;
   cursor: pointer;
 }
 .producto:hover {
@@ -323,22 +323,25 @@
 }
 .producto img {
   border-radius: 10px;
-  width: 170px;
+  width: 90%;
 }
 
 .informacion {
   border-top: 1px solid rgb(230, 230, 230);
-  padding: 1rem;
+  padding: 1px;
   display: flex;
   flex-flow: column;
 }
-.informacion a {
+.informacion .carrito, .informacion .aa {
   text-decoration: none;
-  color: black;
+  color: rgb(0, 0, 0);
+  border: 1px solid rgb(0, 166, 80);
+  border-radius: 10px;
 }
-.informacion a:hover {
-  transition: all 0.3s;
-  color: rgb(52, 131, 250);
+.informacion .carrito:hover, .informacion .aa:hover {
+  background-color: rgb(0, 166, 80);
+  color: white;
+  transition: all 0.5s;
 }
 
 .informacion * + * {
@@ -382,37 +385,46 @@
 @media screen and (min-width: 600px) {
   .producto {
     margin-left: 15px;
-    margin: 10px;
+    margin: 2px;
   }
 }
 @media screen and (min-width: 410px) {
   .producto {
     align-items: center;
     margin-top: 10px;
-    margin: 2px;
-    box-shadow: none;
-    background-color: rgb(250, 250, 250);
+    margin: 1px;
+    max-width: 80px;
+    box-shadow: 0 0 0.1em rgba(0, 0, 0, 0.2);
+    background-color: transparent;
     cursor: pointer;
   }
   .producto:hover {
-    box-shadow: none;
-    transition-property: none;
-    transition-duration: none;
+    box-shadow: 0 0 1.2em rgba(0, 0, 0, 0.2);
+    transition-property: box-shadow;
+    transition-duration: 0.3s;
+  }
+  .producto img {
+    border-radius: 10px;
+    width: 90%;
   }
 }
-@media screen and (min-width: 393px) {
+@media screen and (min-width: 375px) {
   .producto {
     align-items: center;
     margin-top: 10px;
-    margin: 2px;
+    margin: 1px;
+    max-width: 80px;
     box-shadow: none;
-    background-color: rgb(250, 250, 250);
-    cursor: pointer;
+    background-color: transparent;
   }
   .producto:hover {
     box-shadow: none;
     transition-property: none;
     transition-duration: none;
+  }
+  .producto img {
+    border-radius: 10px;
+    width: 190px;
   }
 }
 @media screen and (min-width: 520px) {
@@ -421,13 +433,19 @@
     margin-top: 10px;
     margin-left: 5px;
     margin: 2px;
-    box-shadow: none;
-    background-color: rgb(250, 250, 250);
+    max-width: 180px;
+    box-shadow: 0 0 0.1em rgba(0, 0, 0, 0.2);
+    background-color: transparent;
     cursor: pointer;
   }
   .producto:hover {
-    box-shadow: none;
-    transition-property: none;
-    transition-duration: none;
+    box-shadow: 0 0 1.2em rgba(0, 0, 0, 0.2);
+    transition-property: box-shadow;
+    transition-duration: 0.3s;
   }
-}/*# sourceMappingURL=style.css.map */
+  .producto img {
+    border-radius: 10px;
+    width: 90%;
+  }
+}
+/*buttom*//*# sourceMappingURL=style.css.map */
