--- a/scss/layout/_ventas.scss
+++ b/scss/layout/_ventas.scss
@@ -7,7 +7,7 @@
     border-radius: 6px;
     max-width: 180px;
     box-shadow: 0 0 0.1em rgba(0,0,0, 0.2);
-    background-color: rgb(245, 245, 245);
+    background-color: transparent;
     cursor: pointer;
     &:hover{
         box-shadow:  0 0 1.2em rgba(0,0,0, 0.2);
@@ -16,20 +16,26 @@
     }
     img{
         border-radius: 10px;
-        width: 170px;
+        width: 90%;
     }
 }
 .informacion{
     border-top: 1px solid rgb(230, 230, 230);
-    padding: 1rem;
+    padding: 1px;
     display: flex;
     flex-flow: column;
-    a{
+    .aa{
+        @extend .carrito
+    }
+    .carrito{
         text-decoration: none;
-        color: black;
+        color: rgb(0, 0, 0);
+        border: 1px solid rgb(0, 166, 80);
+        border-radius: 10px;
         &:hover{
-            transition: all .3s;
-            color: rgb(52, 131, 250);
+            background-color: rgb(0, 166, 80);
+            color: white;
+            transition: all 0.5s;
         }
     }
 }
@@ -75,38 +81,68 @@
 @media screen and (min-width: 600px){
     .producto{
         margin-left: 15px;
-        margin: 10px;
+        margin: 2px;
     }
 }
 @media screen and (min-width: 410px){
     .producto{
         align-items: center;
         margin-top: 10px;
-        margin: 2px;
-        box-shadow: none;
-    background-color: rgb(250, 250, 250);
+        margin: 1px;
+        max-width: 80px;
+    box-shadow: 0 0 0.1em rgba(0,0,0, 0.2);
+    background-color: transparent;
     cursor: pointer;
     &:hover{
-        box-shadow: none;
-        transition-property: none;
-        transition-duration: none;
+        box-shadow:  0 0 1.2em rgba(0,0,0, 0.2);
+        transition-property: box-shadow;
+        transition-duration: 0.3s;
     }
+    img{
+        border-radius: 10px;
+        width: 90%;
     }
 }
-@media screen and (min-width: 393px){
+}
+
+@media screen and (min-width: 375px){
     .producto{
         align-items: center;
         margin-top: 10px;
-        margin: 2px;
-        box-shadow: none;
-    background-color: rgb(250, 250, 250);
-    cursor: pointer;
+        margin: 1px;
+        max-width: 80px;
+        box-shadow:none;
+        background-color: transparent;
     &:hover{
-        box-shadow: none;
-        transition-property: none;
-        transition-duration: none;
+        box-shadow:  none;
+        transition-property:none;
+        transition-duration:none;
     }
+    img{
+        border-radius: 10px;
+        width: 190px;
     }
+    .informacion{
+        border-top: 1px solid rgb(230, 230, 230);
+        padding: 0.5px;
+        display: flex;
+        flex-flow: column;
+        .aa{
+            @extend .carrito
+        }
+        .carrito{
+            text-decoration: none;
+            color: rgb(0, 0, 0);
+            border: 1px solid rgb(0, 166, 80);
+            border-radius: 10px;
+            &:hover{
+                background-color: rgb(0, 166, 80);
+                color: white;
+                transition: all 0.5s;
+            }
+        }
+    }
+}
 }
 @media screen and (min-width: 520px){
     .producto{
@@ -114,13 +150,21 @@
         margin-top: 10px;
         margin-left: 5px;
         margin: 2px;
-        box-shadow: none;
-    background-color: rgb(250, 250, 250);
+        max-width: 180px;
+    box-shadow: 0 0 0.1em rgba(0,0,0, 0.2);
+    background-color: transparent;
     cursor: pointer;
     &:hover{
-        box-shadow: none;
-        transition-property: none;
-        transition-duration: none;
+        box-shadow:  0 0 1.2em rgba(0,0,0, 0.2);
+        transition-property: box-shadow;
+        transition-duration: 0.3s;
     }
+    img{
+        border-radius: 10px;
+        width: 90%;
     }
 }
+
+}
+
+/*buttom*/
