--- a/scss/layout/_ventas.scss
+++ b/scss/layout/_ventas.scss
@@ -67,6 +67,15 @@
     font-size: 0.8em;
 }
 
+.favo{
+    text-decoration: none;
+    transition: all 300ms ease;
+    overflow: hidden;
+    &:hover{
+    transform: scale(1.2);
+    }
+}
+
 .ppp2{
     font-size: 55px;
     color: rgb(19, 168, 255);
