--- a/css/styleJs.css
+++ b/css/styleJs.css
@@ -1,3 +1,7 @@
+*{
+  margin: 0;
+  padding: 0;
+}
 html {
     -ms-text-size-adjust: 100%; 
     -webkit-text-size-adjust: 100%; 
@@ -873,4 +877,125 @@ html {
 .titulo a:hover {
   color: rgb(95, 253, 180);
   transition: 1.5s;
+}
+/*Err 404*/ 
+.error-container {
+	text-align: center;
+	font-size: 180px;
+	font-family: 'Catamaran', sans-serif;
+	font-weight: 800;
+	margin: 20px 15px;
+}
+.error-container > span {
+	display: inline-block;
+	line-height: 0.7;
+	position: relative;
+	color: #FFB485;
+}
+.error-container > span > span {
+	display: inline-block;
+	position: relative;
+}
+.error-container > span:nth-of-type(1) {
+	perspective: 1000px;
+	perspective-origin: 500% 50%;
+	color: #F0E395;
+}
+.error-container > span:nth-of-type(1) > span {
+	transform-origin: 50% 100% 0px;
+	transform: rotateX(0);
+	animation: easyoutelastic 8s infinite;
+}
+.error-container > span:nth-of-type(3) {
+	perspective: none;
+	perspective-origin: 50% 50%;
+	color: #D15C95;
+}
+.error-container > span:nth-of-type(3) > span {
+	transform-origin: 100% 100% 0px;
+	transform: rotate(0deg);
+	animation: rotatedrop 8s infinite;
+}
+
+@keyframes easyoutelastic {
+	0% {
+		transform: rotateX(0);
+	}
+	9% {
+		transform: rotateX(210deg);
+	}
+	13% {
+		transform: rotateX(150deg);
+	}
+	16% {
+		transform: rotateX(200deg);
+	}
+	18% {
+		transform: rotateX(170deg);
+	}
+	20% {
+		transform: rotateX(180deg);
+	}
+	60% {
+		transform: rotateX(180deg);
+	}
+	80% {
+		transform: rotateX(0);
+	}
+	100% {
+		transform: rotateX(0);
+	}
+}
+
+@keyframes rotatedrop {
+	0% {
+		transform: rotate(0);
+	}
+	10% {
+		transform: rotate(30deg);
+	}
+	15% {
+		transform: rotate(90deg);
+	}
+	70% {
+		transform: rotate(90deg);
+	}
+	80% {
+		transform: rotate(0);
+	}
+	100% {
+		transform: rotateX(0);
+	}
+}
+
+/*Volver*/
+.volver{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 90px;
+  text-align: center;
+}
+.volver a{
+  font-family: 'Grape Nuts', cursive;
+  text-align: center;
+  text-decoration: none;
+  font-size: 30px;
+  color: #D15C95;
+  border: 1px solid #eedb71;
+  padding: 10px;
+  border-radius: 15px;
+}
+.volver a:hover{
+  color: #c72372;
+  background: #eedb71;
+  transition: all 1s;
+}
+
+.Textto{
+  margin-top: 40px;
+  font-family: 'Grape Nuts', cursive;
+}
+.Textto h1{
+  color: rgb(3, 3, 3);
 }
