--- a/css/style.css
+++ b/css/style.css
@@ -448,4 +448,37 @@
     width: 90%;
   }
 }
+.contenedorUsuarios{
+  margin-top: 60px;
+  border: 3px groove #e0720c;
+  font-family: 'Grape Nuts', cursive;
+  text-align: center;
+  color: #3b3229;
+  width: 300px;
+  height: auto;
+  position: relative;
+  justify-content: center;
+  align-items: center;
+}
+.contenedorUsuarios h3{
+  color: rgb(7, 7, 7);
+}
+
+.infoEmple{
+  border: 3px groove #e0720c;
+  margin-top: 30px;
+}
+.infoEmple h3{
+  font-family: 'Grape nuts', cursive;
+}
+.infoA{
+  text-decoration: none;
+  font-size: 23px;
+  color: rgb(145, 32, 32);
+}
+
+.reportQue{
+  margin-top: 20px;
+  font-family: 'Grape nuts', cursive;
+}
 /*buttom*//*# sourceMappingURL=style.css.map */
